# getQR

./: .env  .gitignore  README.md  app.py  pyproject.toml
tests/: test_dataviz.py
