[tool.poetry]
name = "dataviz"
version = "0.1.0"
description = ""
authors = ["John Jung <tojohnjung@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^20.1.0"
dash = "^2.0.0"
dash-bootstrap-components = "^1.0.2"
pandas = "^1.4.0"
requests = "^2.27.1"
google-cloud-storage = "^2.1.0"
elastic-enterprise-search = "^7.16.0"
configparser = "^5.2.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
